<resources>
    <string name="app_name">keepclone</string>
    <string name="no_todos">Set up your tasks for the day</string>
    <string name="all_tasks_message">All your tasks that are due today will show up here</string>
    <string name="add_tasks">Tap + to add a new task</string>
    <string name="textview">TextView</string>


    <!-- Image info -->
    <string name="empty_todos_images">Empty todo image</string>

    <!-- Button Labels    -->
    <string name="add_fab">Add new todo</string>
    <string name="menu_btn">Menu icon</string>
    <string name="bell_btn">Notification icon</string>
    <string name="add_todo_btn">Add todo</string>
    <string name="cancel">Cancel</string>
<<<<<<< HEAD
    
=======
    <string name="add_task_button">Add Task</string>

>>>>>>> 3654c449297927837e2ea56862f4d0759821c673
    <!-- Labels -->
    <string name="category">Category</string>
    <string name="due_date">Due Date</string>
    <string name="todo_name"><b>TODO List</b></string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Closed</string>
    <!-- Text input fields -->
    <string name="add_todo_title">Enter todo title</string>
    <string name="add_notes">Add notes</string>
    <string name="add_subtasks">Add subtasks</string>

    <!-- Spinner Fields -->
    <string-array name="spinner_field_category">
        <item>School</item>
        <item>Personal</item>
    </string-array>

    <string-array name="spinner_field_duedate">
        <item>School</item>
        <item>Personal</item>
    </string-array>
</resources>