<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/todo_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"

    >


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/add_todo_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppins"
        android:text="@string/add_todo_title"
        android:textColor="@color/text_70"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout

        android:id="@+id/options_container"
        android:layout_width="fill_parent"
        android:layout_height="115dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/card_background"
        android:elevation="20dp"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/add_todo_text">

        <TextView
            android:id="@+id/category_text"
            android:layout_width="91dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:text="@string/category"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/due_date_text"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/category_text"
            android:layout_marginTop="22dp"
            android:text="@string/due_date"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="65dp"
            android:layout_toEndOf="@id/category_text"
            android:entries="@array/spinner_field_category"
            android:spinnerMode="dropdown"
            android:textSize="11sp" />

        <Button
            android:id="@+id/due_date_picker"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_below="@id/category_spinner"
            android:layout_marginStart="50dp"
            android:layout_marginTop="24dp"
            android:layout_toEndOf="@id/due_date_text"
            android:backgroundTint="@color/white"
            android:gravity="start"
            android:text="Select Date"
            android:textColor="@color/black"
            android:textSize="11sp" />
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/notes"
        android:layout_width="fill_parent"
        android:layout_height="115dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/note_card_background"
        android:gravity="start"
        android:paddingHorizontal="8dp"
        android:paddingTop="5dp"
        android:text="@string/add_notes"
        android:textColor="#E09b2b"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/options_container" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="15dp"
        android:background="@color/off_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notes"
        app:srcCompat="@drawable/ic_fi_plus"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_subtasks"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageButton4"
        app:layout_constraintTop_toBottomOf="@+id/notes" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:backgroundTint="@color/off_white"
        android:stateListAnimator="@null"
        android:text="@string/cancel"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/add_task_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:backgroundTint="@color/primary_blue"
        android:stateListAnimator="@null"
        android:text="@string/add_task_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/cancel_button"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>